# qmmp

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.rus  NOTICE  README  README.RUS  README.UKR  clear_cmake.sh  clear_qmake.cmd  qmmp.pri  qmmp.pro  qmmp.spec  remove_svn_tags  update_ts.sh
lib/: CMakeLists.txt  buffer.h  constants.h  decoder.cpp  decoder.h  decoderfactory.h  downloader.cpp  downloader.h  fileinfo.h  filetag.h  iir_cfs.h  lib.pro  output.cpp  output.h  outputfactory.h  recycler.h  soundcore.cpp  soundcore.h  streamreader.cpp  streamreader.h  visual.cpp  visual.h  visualization.h
lib/equ/: iir_fpu.c
lib/qmmp/: CMakeLists.txt  qmmp.pro
lib/qmmp/Input/: CMakeLists.txt  Input.pro
lib/qmmp/Output/: CMakeLists.txt  Output.pro
qmmp/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.rus  ChangeLog.svn  README  README.RUS  README.UKR  clear_cmake.sh  clear_qmake.cmd  clear_qmake.sh  qmmp.pri  qmmp.pro  remove_svn_tags  update_ts.sh
qmmp-plugin-pack/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.rus  README  README.RUS  TODO  clear_qmake.cmd  clear_qmake.sh  qmmp-plugin-pack.pri  qmmp-plugin-pack.pro  remove_svn_tags
qmmp-plugin-pack/.tx/: config
qmmp-plugin-pack/CommandLineOptions/IncDecVolumeOption/: IncDecVolumeOption.pro  incdecvolumeoption.cpp
qmmp-plugin-pack/bs2b/: bs2b.pro  bs2bplugin.cpp  bs2bplugin.h  effectbs2bfactory.cpp
qmmp-plugin-pack/phonon/: decoder_phonon.cpp  decoder_phonon.h  decoderphononfactory.cpp  decoderphononfactory.h  phonon.pro
qmmp-plugin-pack/src/: CMakeLists.txt  plugins.pri
qmmp-plugin-pack/src/Ui/: Ui.pro  (+1 more)
qmmp-plugin-pack/utils/: update_ts.sh  update_tx.sh
qmmp-plugin-pack/wildmidi/: decoder_wildmidi.cpp  decoder_wildmidi.h  decoderwildmidifactory.cpp  decoderwildmidifactory.h  wildmidi.pro
qmmp/.tx/: config
qmmp/doc/: Doxyfile
qmmp/lib/: CMakeLists.txt  constants.h  decoder.cpp  decoder.h  downloader.cpp  downloader.h  effect.cpp  fileinfo.cpp  iir.c  iir.h  lib.pro  output.cpp  output.h  outputfactory.h  recycler.cpp  soundcore.cpp  soundcore.h  streamreader.cpp  streamreader.h  visual.h  visualfactory.h
qmmp/src/: CMakeLists.txt  aboutdialog.h  balancebar.cpp  button.cpp  commandlineoption.cpp  configdialog.cpp  configdialog.h  configdialog.ui  display.cpp  dock.cpp  eqgraph.h  eqpreset.cpp  eqtitlebar.h  eqwidget.cpp  eqwidget.h  filedialog.cpp  filedialog.h  guard.h  jumptotrackdialog.cpp  jumptotrackdialog.ui  keyboardmanager.cpp  listwidget.cpp  listwidget.h  mainvisual.cpp  mainvisual.h  mainwindow.cpp  mainwindow.h  mediafile.cpp  mediafile.h  mp3player.cpp  playlist.cpp  playlistformat.h  playlistmodel.cpp  playlistmodel.h  playlisttitlebar.h  pluginitem.cpp  pluginitem.h  positionbar.cpp  preseteditor.ui  qmmpstarter.cpp  (+18 more)
qmmp/utils/: update_ts.sh  update_tx.sh
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  addurldialog.cpp  addurldialog.h  addurldialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  display.cpp  display.h  dock.cpp  dock.h  eqgraph.cpp  eqslider.cpp  eqtitlebar.cpp  eqtitlebar.h  eqwidget.cpp  eqwidget.h  filedialog.cpp  fileloader.h  guard.cpp  jumptotrackdialog.h  keyboardmanager.h  logscale.cpp  mainvisual.cpp  mainvisual.h  mainwindow.cpp  mainwindow.h  mediafile.cpp  mediafile.h  monostereo.cpp  pixmapwidget.cpp  pixmapwidget.h  playlist.cpp  playlist.h  playlistformat.cpp  playlistmodel.cpp  playlistmodel.h  playlisttitlebar.cpp  (+19 more)
src/app/: CMakeLists.txt  app.pro  builtincommandlineoption.cpp  builtincommandlineoption.h  lxdesupport.cpp  lxdesupport.h  main.cpp  qmmp.desktop  qmmp.rc  qmmp_dir.desktop  qmmp_enqueue.desktop  qmmp_unity.desktop  qmmpapplication.cpp  qmmpapplication.h  qmmpstarter.cpp  qmmpstarter.h  xfcesupport.cpp  xfcesupport.h
src/html/: about_en.html  thanks_ru.txt
src/images/: qmmp.xpm
src/plugins/: CMakeLists.txt  plugins.pro
src/qmmp/: CMakeLists.txt  abstractdetailsdialog.cpp  abstractdetailsdialog.h  abstractengine.cpp  abstractengine.h  audioconverter.cpp  audioconverter.h  audioconverter_p.h  audioparameters.cpp  audioparameters.h  audiosettings.cpp  buffer.h  channelmap.cpp  coverwidget.cpp  decoder.cpp  decoder.h  decoderfactory.h  downloader.cpp  effect.cpp  effect.h  effectfactory.h  emptyinputsource.cpp  emptyinputsource.h  enginefactory.h  eqsettings.cpp  eqsettings.h  fileinfo.cpp  fileinfo.h  fileinputsource.cpp  fileinputsource.h  filetag.cpp  filetag.h  inputsource.cpp  inputsource.h  inputsourcefactory.h  metadatachangedevent.cpp  metadatachangedevent_p.h  metadatamanager.cpp  metadatamanager.h  metadatamodel.cpp  (+44 more)
src/qmmpui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog_p.h  abstractplaylist.cpp  abstractplaylist.h  abstractplaylistitem.cpp  abstractplaylistitem.h  addurldialog.cpp  columneditor.cpp  columneditor_p.h  columnmanager.cpp  columnmanager.h  commandlinemanager.cpp  commandlinemanager.h  commandlineoption.h  configdialog.cpp  configdialog.h  control.cpp  control.h  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  filedialog.cpp  filedialog.h  filedialogfactory.h  fileloader.cpp  fileloader.h  fileloader_p.h  general.cpp  general.h  generalfactory.h  generalhandler.cpp  generalhandler.h  groupedcontainer.cpp  groupedcontainer_p.h  jumptotrackdialog.cpp  jumptotrackdialog_p.h  mediaplayer.cpp  mediaplayer.h  metadataformatter.cpp  (+55 more)
src/translations/: qmmp_locales.qrc  qmmp_ru.ts  qmmp_tr.ts  qmmp_zh_CN.qm  qmmp_zh_CN.ts
src/ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  actionmanager.cpp  actionmanager.h  addurldialog.cpp  addurldialog.h  balancebar.cpp  balancebar.h  builtincommandlineoption.cpp  builtincommandlineoption.h  button.cpp  button.h  commandlineoption.cpp  commandlineoption.h  configdialog.cpp  configdialog.h  cursorimage.cpp  cursorimage.h  display.cpp  display.h  dock.cpp  eqgraph.cpp  eqgraph.h  eqpreset.cpp  eqpreset.h  eqslider.cpp  eqslider.h  eqtitlebar.cpp  eqtitlebar.h  eqwidget.cpp  eqwidget.h  filedialog.cpp  fileloader.cpp  jumptotrackdialog.cpp  jumptotrackdialog.h  keyboardmanager.cpp  keyboardmanager.h  listwidget.cpp  listwidget.h  (+70 more)
(+6563 files in other folders)
