SET(USE_ALSA TRUE CACHE BOOL "enable/disable alsa plugin")
SET(USE_JACK TRUE CACHE BOOL "enable/disable jack plugin")
SET(USE_OSS TRUE CACHE BOOL "enable/disable oss plugin")
SET(USE_PULSE TRUE CACHE BOOL "enable/disable pulse audio plugin")

IF(USE_ALSA)
MESSAGE( STATUS "ALSA ON")
add_subdirectory(alsa)
ELSE(USE_ALSA)
MESSAGE( STATUS "ALSA OFF")
ENDIF(USE_ALSA)

IF(USE_JACK)
MESSAGE( STATUS "JACK ON")
add_subdirectory(jack)
ELSE(USE_JACK)
MESSAGE( STATUS "JACK OFF")
ENDIF(USE_JACK)

IF(USE_OSS)
MESSAGE( STATUS "OSS ON")
add_subdirectory(oss)
ELSE(USE_OSS)
MESSAGE( STATUS "OSS OFF")
ENDIF(USE_OSS)

IF(USE_PULSE)
MESSAGE( STATUS "PULSE AUDIO ON")
add_subdirectory(pulseaudio)
ELSE(USE_PULSE)
MESSAGE( STATUS "PULSE AUDIO OFF")
ENDIF(USE_PULSE)
